--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>My Github ^_^</title>
 </head>
 <body>
-    <h6>HI Welcome to my github account 🫣😊</h6>
+    <b>HI Welcome to my github account 🫣😊</b>
 </body>
 </html>
