--- a/index.html
+++ b/index.html
@@ -1,17 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <style>
-        b{
-        color: red;
-        }
-    </style>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Github ^_^</title>
-</head>
-<body>
-    <b>HI Welcome to my github account 🫣😊</b>
-</body>
+
+<html lang="en" class="no-js">
+    <head>
+        <meta charset="utf-8"/>
+        <title>Metronic "Acecv" Frontend Freebie</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta content="width=device-width, initial-scale=1" name="viewport"/>
+        <meta content="" name="description"/>
+        <meta content="" name="author"/>
+        <script src="https://kit.fontawesome.com/beed6589e0.js" crossorigin="anonymous"></script>
+        <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
+        <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
+        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+
+        <link href="css/animate.css" rel="stylesheet">
+        <link href="vendor/swiper/css/swiper.min.css" rel="stylesheet" type="text/css"/>
+
+        <link href="css/layout.min.css" rel="stylesheet" type="text/css"/>
+
+        <link rel="shortcut icon" href="favicon.ico"/>
+    </head>
+    <body id="body" data-spy="scroll" data-target=".header">
+
+        <header class="header navbar-fixed-top">
+            <nav class="navbar" role="navigation">
+                <div class="container">
+                    <div class="menu-container js_nav-item">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="toggle-icon"></span>
+                        </button>
+
+                        
+                    </div>
+
+                    <div class="collapse navbar-collapse nav-collapse">
+                        <div class="menu-container">
+                            <ul class="nav navbar-nav navbar-nav-right">
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Home</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">About</a></li>
+                                <!-- <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Experience</a></li> -->
+                                <!-- <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Work</a></li> -->
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <div class="promo-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-20 sm-margin-b-15">
+                        <div class="margin-b-15">
+                            <h1 class="promo-block-title">Sadiq Abdullah Hassan<br>Nickname( 'Zangestu' )</h1>
+                            <p class="promo-block-text">Full-Stack Mobile Application &amp; Cyber Security </p>
+                        </div>
+                        <ul class="list-inline">
+                            <li><a href="https://www.facebook.com/sadek.szh" ><i class="fa-2xl fa-brands fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/zangestu2" ><i class="fa-2xl fa-brands fa-twitter"></i></a></li>
+                            <li><a href="https://instagram.com/sadek.szh" ><i class="fa-2xl fa-brands fa-instagram"></i></a></li>
+                            <li><a href="https://github.com/zangestu2Eszh" ><i class="fa-2xl fa-brands fa-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/sadiq-abdullah-364b201a5/" ><i class="fa-2xl fa-brands fa-linkedin"></i></a></li>
+                            <li><a href="https://t.me/zangestu"><i class="fa-2xl fa-brands fa-telegram"></i></a></li>
+                        </ul>
+                    </div>
+                   
+            </div>
+        </div>
+        <div id="about">
+            <div class="container content-lg">
+                <div class="row">
+                    <div class="col-sm-5 sm-margin-b-60">
+                        <img class="full-width img-responsive" src="https://c4.wallpaperflare.com/wallpaper/269/470/344/scandroid-4k-in-hd-wallpaper-preview.jpg" alt="Image">
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="section-seperator margin-b-50">
+                                <div class="margin-b-30">
+                                    <h2>About Me</h2>
+                                    <p>I'm Sadiq Abdullah</p>
+                                    <p> HI Welcome to my page 🫣😊 </p>
+                                    <p> HI Welcome to my page 🫣😊 </p>
+                                    <p> HI Welcome to my page 🫣😊 </p>
+                                    <p> HI Welcome to my page 🫣😊 </p>
+                                    <p> HI Welcome to my page 🫣😊 </p>
+                                </div>
+                                 </div>
+                        </div>
+
+                        <h2>My Skills</h2>
+                        <div class="progress-box">
+                            <h5>Mobile Application <span class="color-heading pull-right">90%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="90"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>Laravel <span class="color-heading pull-right">80%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="80"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>Penetration Testing<span class="color-heading pull-right">95%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="95"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="contact">
+            <div class="bg-color-sky-light">
+                <div class="container content-lg">
+                    <div class="row margin-b-40">
+                        <div class="col-sm-6">
+                           <h2>Contact Me</h2>
+                            <p>Here is some personal information about me</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-xs-6 md-margin-b-30">
+                            <h4>Location</h4>
+                            <a href="#">Iraq , Baghdad</a>
+                        </div>
+                        <div class="col-md-3 col-xs-6 md-margin-b-30">
+                            <h4>Phone</h4>
+                            <a href="#">+964 7727341795</a>
+                        </div>
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
+
+        <script src="vendor/jquery.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
+        <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+        <script src="vendor/jquery.easing.js" type="text/javascript"></script>
+        <script src="vendor/jquery.back-to-top.js" type="text/javascript"></script>
+        <script src="vendor/jquery.smooth-scroll.js" type="text/javascript"></script>
+        <script src="vendor/jquery.wow.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery.parallax.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery.appear.js" type="text/javascript"></script>
+        <script src="vendor/swiper/js/swiper.jquery.min.js" type="text/javascript"></script>
+
+        <script src="js/layout.min.js" type="text/javascript"></script>
+        <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
+        <script src="js/components/swiper.min.js" type="text/javascript"></script>
+        <script src="js/components/wow.min.js" type="text/javascript"></script>
+
+    </body>
 </html>
