--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                     <div class="row">
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Location</h4>
-                            <a href="#">Iraq , Baghdad</a>
+                            <a href="https://www.google.com/maps/place/Baghdad/@33.3116075,44.2158194,11z/data=!3m1!4b1!4m6!3m5!1s0x15577f67a0a74193:0x9deda9d2a3b16f2c!8m2!3d33.315241!4d44.3660671!16zL20vMDFmcW0">Iraq , Baghdad</a>
                         </div>
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Phone</h4>
-                            <a href="#">+964 7727341795</a>
+                            <a href="tel:+9647727341795">+964 7727341795</a>
                         </div>
         <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
 
