--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-sm-20 sm-margin-b-15">
                         <div class="margin-b-15">
                             <h1 class="promo-block-title">Sadiq Abdullah Hassan<br>Nickname( 'Zangestu' )</h1>
-                            <p class="promo-block-text">Full-Stack Mobile Application &amp; Cyber Security </p>
+                            <p class="promo-block-text">Mobile Application Developer &amp; Cyber Security </p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.facebook.com/sadek.szh" ><i class="fa-2xl fa-brands fa-facebook"></i></a></li>
