--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
                            <h2>Contact Me</h2>
-                            <p>Here is some personal information about me: ^_^</p>
+                            <p>Here is some personal information about me: rm -rf self.ini</p>
+                            <p>LOLSEC (^_^)</p>
                         </div>
                     </div>
                     <div class="row">
