--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Web Application Developer<span class="color-heading pull-right">60%</span></h5>
+                            <h5>Backend Developer<span class="color-heading pull-right">70%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="60"></div>
                             </div>
@@ -170,21 +170,6 @@
                             <h5>Node<span class="color-heading pull-right">85%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="85"></div>
-                            </div>
-                        </div>
-
-
-                        <div class="progress-box">
-                            <h5>Clickup Implementation<span class="color-heading pull-right">75%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="75"></div>
-                            </div>
-                        </div>
-
-                        <div class="progress-box">
-                            <h5>Oodo Implementation<span class="color-heading pull-right">64%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="64"></div>
                             </div>
                         </div>
 
